--- a/styles.css
+++ b/styles.css
@@ -45,7 +45,10 @@ nav ul li a {
     display: flex;
     justify-content: center;
     align-items: center;
-    color: #fff;
+}
+
+.hero-text {
+    color: #000; /* Set the text color to black */
     text-align: center;
 }
 
